tests/lean/noTabs.lean.expected.out
let a := 1;
sorryAx ?m true : ?m
noTabs.lean:3:0: error: tabs are not allowed; please configure your editor to expand them
