tests/lean/noTabs.lean
#guard_msgs (drop error) in -- TODO(kmill) remove #guard_msgs after stage0 update
#check
  let a := 1
	let b := 2
  a + b
